# Capture_with_Kinectv2

./: CMakeLists.txt  README.md  capture.cpp
